  abstraction of modules that can be used by external tooling to perform
  definition-aware operations.
  (Ulysse Gérard, Thomas Refis and Leo White, review by Florian Angeletti)

- #10742: strong call-by-need reduction for shapes
  (Gabriel Scherer and Nathanaëlle Courant,
   review by Florian Angeletti, Ulysse Gérard and Thomas Refis)

### Build system:

- #10835 Disable DT_TEXTREL warnings on x86 32 bit architecture by passing
  -Wl,-z,notext in mksharedlib and mkmaindll. Fixes relocation issues, reported
  in #9800, making local patches in Debian, Alpine, and FreeBSD superfluous.
  (Hannes Mehnert with Kate Deplaix and Stéphane Glondu, review by Xavier Leroy)

- #10717: Simplify the installation of man pages
  (Sébastien Hinderer, review by David Allsopp)

- #10739: Stop installing extract_crc
  (Sébastien Hinderer, review by David Allsopp, Daniel Bünzli, Xavier Leroy
  and Gabriel Scherer)

- #10797: Compile with -d2VolatileMetadata- on supporting versions of Visual
  Studio. This suppresses the addition of .voltbl sections and eliminates
  linking errors in systhreads.
  (David Allsopp, review by Jonah Beckford and Sébastien Hinderer)

### Bug fixes:

- #9214, #10709: Wrong unmarshaling of function pointers in debugger mode.
  This was causing ocamldebug to crash when running some user-defined printers.
  (Xavier Leroy, report by Rehan Malak, review by Gabriel Scherer and
   Vincent Laviron)

- #10364: Improve detection of ambiguity in case bodies.
  (Jacques Garrigue, review by Thomas Refis)

- #10473: Add CFI directives to RISC-V runtime and asmcomp.
  This allows stacktraces to work in gdb through C and OCaml calls.
  (Edwin Török, review by Nicolás Ojeda Bär and Xavier Leroy)

- #10539: Field kinds should be kept when copying types
  Losing the sharing meant that one could desynchronize them between several
  occurrences of self, allowing a method to be both public and hidden,
  which broke type soundness.
  (Jacques Garrigue, review by Leo White)
